[gd_scene load_steps=2 format=3 uid="uid://da20ajosv5mq0"]

[ext_resource type="Script" path="res://scenes/MainMenu/LoadGameMenu.gd" id="1_vf0lh"]

[node name="LoadGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vf0lh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 120
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 120

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SavesContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="LoadGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 55.0
offset_right = -91.0
offset_bottom = 86.0
grow_horizontal = 0
text = "Return"

[connection signal="pressed" from="MarginContainer/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="ReturnButton" to="." method="_on_button_pressed"]
